Thu Jun  6 17:41:24 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/common/Mem_Map_Stream.h:
        * ACEXML/common/Mem_Map_Stream.cpp:
        * ACEXML/common/HttpCharStream.h:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/URL_Addr.cpp:

          Fixed the explicit template instantiation problems on Solaris.

Thu Jun  6 18:35:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Acceptor.h (ACE_Strategy_Acceptor): Made open() virtual
          since its parent class (ACE_Acceptor) ope() is also virtual.
          Resolves warning from Forte 6 that open() hides its parent
          class's open().

Thu Jun  6 18:10:45 2002  Steve Huston  <shuston@riverace.com>

        * ace/README: Removed ACE_HAS_OPTIMIZED_MESSAGE_QUEUE. No configs
          use it, and it's functionality doesn't really support the
          message queue deactivation/pulse semantics.

        * ace/Message_Queue.h:
        * ace/Message_Queue_T.{h cpp i}: Removed the "int pulse" argument
          from deactivate() and add a pulse() method.  States stay the
          same.
          Took out all the ACE_HAS_OPTIMIZED_MESSAGE_QUEUE stuff.  It's
          not used any longer.

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Use the pulse()
          method instead of deactivate (1).

        * examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Removed answered
          questions.  Removed reimplemented handle_connect() method
          because the needed things are now available via the framework.

        * ace/Asynch_Acceptor.{h cpp}:
        * ace/Asynch_Connector.{h cpp}: Added new hook method,
          int validate_connection (const ACE_Asynch_Accept::Result&result,
            const ACE_INET_Addr& remote_addr, const ACE_INET_Addr& local_addr)
          that allows access to success/fail, handle, and addresses.  The
          validate_new_connection (const ACE_INET_Addr&) method is now
          deprecated.
